# HorseRacing

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: c-cpp.yml  cmake.yml
include/: HorseMatrix.h
src/: CMakeLists.txt  HorseMatrix.cpp  HorseRacing.cpp  main.cpp
